# CMOR438-F25

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  feedback_request.md
.github/workflows/: ci.yml
examples/: README.md
examples/supervised_learning/: knn.ipynb
examples/supervised_learning/decision_tree/: README.md  decision_tree.ipynb
examples/supervised_learning/ensemble_methods/: README.md  ensemble_methods.ipynb
examples/supervised_learning/knn/: README.md  knn.ipynb
examples/supervised_learning/linear_regression/: README.md  linear_regression.ipynb
examples/supervised_learning/logistic_regression/: README.md  logistic_regression.ipynb
examples/supervised_learning/multilayer_perceptron/: README.md  multilayer_perceptron.ipynb
examples/supervised_learning/perceptron/: README.md  perceptron.ipynb
examples/supervised_learning/random_forest/: README.md  random_forest.ipynb
examples/unsupervised_learning/community_detection/: README.md  community_detection.ipynb
examples/unsupervised_learning/db_scan/: README.md  dbscan.ipynb
examples/unsupervised_learning/k_means_klustering/: README.md  k_means_clustering.ipynb
examples/unsupervised_learning/pca/: README.md  pca.ipynb
src/: README.md
src/rice2025/: README.md  __init__.py  knn.py  metrics.py  postprocess.py  preprocess.py
src/rice2025/supervised_learning/: README.md  __init__.py  (+10 more)
tests/: README.md
tests/integration/: supervised.py  test_supervised.py
tests/unit/: test_knn.py  test_metrics.py  test_postprocess.py  test_preprocess.py
(+29 files in other folders)
